integrate redux with redux-webext (#4)
* add redux, react-redux and redux-webext as dependencies

* integrate redux with redux-webext

*  fix popup will shrink sometimes due to client side render with react

--- a/src/popup/index.scss
+++ b/src/popup/index.scss
@@ -1,9 +1,10 @@
-.Popup {
+.popup {
   white-space: nowrap;
 }
 
-.Popup:hover {
-  cursor: pointer;
+body {
+  height: 100px;
+  width: 375px;
 }
 
 code {
